# frauddefctl

./: README.md  cli.py  pyproject.toml
adapters/: api_keys.py  bigquery.py  logging.py  recaptcha.py
core/: audit.py  config.py  guardrails.py  models.py  parsing.py  reports.py  risk.py
modules/: safe_risk.py  search.py
ui/: menu.py
